<resources>
    <string name="app_name">Test-Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="about_me">About me</string>
    <string name="play">Play</string>
    <string name="instructions">Instructions</string>
    <string name="hi_man">Hi Man</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="test_time">Test-Time</string>
    <string name="long1">Hello! Thank you for Looking about me    Name: Sagar Subedi   Major : Computer Science   School: Minnesota state University  Moorhead   Programming Languages: Java , C#,   C++, Python</string>
    <string name="look_instructions">Look Instructions</string>
    <string name="hurray">Hurray ! Thank you for chosing my App Instructions are Below  1. There are 9 questions   2. You can choose categories  3. You can also choose sets  4. Try your best to get all of them right  5. Scores will be sent at the end  6. Next button is disabled until you answer a question</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="buttonb">Button</string>
    <string name="buttonv">Button</string>
    <string name="_5_10">5/10</string>
    <string name="number_1">Number 1</string>
    <string name="test_time11">Test-Time</string>
    <string name="y_e_s">Y e s</string>
    <string name="ready">Ready?</string>
    <string name="_1">1</string>
    <string name="BELOW">Please Sign In below to Play this Quiz</string>
    <string name="EX">samplename@example.com</string>
    <string name="ASTRICK">**********</string>
    <string name="REM">Remember Username and Password</string>
    <string name="signin">SignIn</string>
    <string name="sets">Sets</string>
    <string name="share">Share</string>
    <string name="_10">10</string>
    <string name="out_of">Out of</string>
    <string name="_5">5</string>
    <string name="score">Score</string>
    <string name="DOB">Select your Date of Birth</string>
    <string name="i_am_a">I am a</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="SEL">Please Select you Gender</string>
    <string name="password">Password</string>
    <string name="test_time1">Test-Time</string>
</resources>
