<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/twobulb">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/twobulb"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/TEES"
            android:layout_marginTop="@dimen/BIS"
            android:layout_marginRight="@dimen/TEES"
            android:layout_marginBottom="@dimen/BIS"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TestHome1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/TEES"
                android:gravity="center"
                android:padding="@dimen/AATH"
                android:text="@string/test_time1"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/HUJGWS"
                android:textStyle="bold"
                app:fontFamily="@font/advent_pro_thin" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/TEES"
                android:gravity="center"
                android:padding="@dimen/GUS"
                android:text=" Register"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/TEES"
                android:textStyle="bold"
                app:fontFamily="@font/advent_pro_thin" />

            <EditText

                android:id="@+id/regUname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/BIS"
                android:background="@color/edittextcolor"
                android:ems="10"
                android:gravity="center"
                android:hint="UserName"

                android:padding="@dimen/DAS" />


            <EditText

                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/BIS"
                android:background="@color/edittextcolor"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:padding="@dimen/DAS" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/DAS"
                android:fontFamily="@font/advent_pro_thin"
                android:text="@string/SEL"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/BIS"
                android:textStyle="bold"></TextView>


            <RadioGroup

                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/edittextcolor">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/male"

                    android:textSize="@dimen/PANDHRA"
                    android:textStyle="bold"></RadioButton>

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/female"
                    android:textSize="@dimen/PANDHRA"
                    android:textStyle="bold"></RadioButton>

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="@dimen/PANDHRA"
                    android:textStyle="bold"

                    ></RadioButton>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BIS"
                android:layout_marginBottom="@dimen/DAS"
                android:fontFamily="@font/advent_pro_thin"
                android:text="@string/i_am_a"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/BIS"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/SETO"



                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BIS"
                android:layout_marginBottom="@dimen/DAS"
                android:fontFamily="@font/advent_pro_thin"
                android:text="@string/DOB"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/BIS"
                android:textStyle="bold"></TextView>

            <TextView

                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/BIS"
                android:background="@color/edittextcolor"
                android:ems="10"
                android:gravity="center"


                android:padding="@dimen/DAS" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BIS"
                android:layout_marginBottom="@dimen/DAS"
                android:fontFamily="@font/advent_pro_thin"
                android:text="Enter Your Phone Number  "
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/BIS"
                android:textStyle="bold"></TextView>

            <EditText

                android:id="@+id/phnnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/BIS"
                android:background="@color/edittextcolor"
                android:ems="10"
                android:gravity="center"


                android:padding="@dimen/DAS" />


            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/BISA"
                android:background="@color/KALO"

                android:gravity="center"
                android:padding="@dimen/AATH"
                android:text="Confirm"
                android:textColor="@color/fontcolor1"
                android:textSize="@dimen/BIS"
                android:textStyle="bold"
                app:fontFamily="@font/advent_pro_thin" />


        </LinearLayout>
    </ScrollView>




</RelativeLayout>